"Add multi-provider market data fallback support with AssetProvider entity and AssetInitializer. Implement AssetSymbolValidator and extend DCA service for symbol translation and fallback scenarios. Include repositories, tests, and documentation."